--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "devDependencies": {
     "sass-embedded": "^1.81.0",
-    "vite": "^5.4.10"
+    "vite": "^5.4.10",
+    "vite-plugin-html-inject": "^1.1.2"
+  },
+  "dependencies": {
+    "sass": "^1.81.0"
   }
 }
