--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "devDependencies": {
     "sass-embedded": "^1.81.0",
     "vite": "^5.4.10",
-    "vite-plugin-html-inject": "^1.1.2"
+    "vite-plugin-html-inject": "^1.1.2",
+    "vite-plugin-static-copy": "^2.2.0"
   },
   "dependencies": {
     "sass": "^1.81.0"
